🧵 Refactor variable names for clarity in PHP and Docker tasks

--- a/roles/firth_docker/tasks/main.yml
+++ b/roles/firth_docker/tasks/main.yml
@@ -36,7 +36,7 @@
         - Apt Cache Update
 
     - name: Flush handlers
-      meta: flush_handlers
+      ansible.builtin.meta: flush_handlers
 
     - name: Install docker
       ansible.builtin.apt:
